arm-templates/azure-deploy-ubuntu.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "User name for the Virtual Machine."
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Password for the Virtual Machine."
        }
      },
      "dnsNameForPublicIP": {
        "type": "string",
        "metadata": {
          "description": "Unique DNS Name for the Public IP used to access the Virtual Machine."
        }
      },
      "projectPrefix": {
        "type": "string",
        "maxLength": 3,
        "minLength": 2,
        "metadata": {
          "description": "Unique project prefix for resources."
        }
      }
    },
    "variables": {
      "location": "[resourceGroup().location]",
      "ubuntuOSVersion": "18.04-LTS",
      "nsgName": "webNsg",
      "storageAccountName1": "[concat(parameters('projectPrefix'),'sa',uniquestring(resourceGroup().id))]",
      "storageAccountName2": "[concat(parameters('projectPrefix'),'sa',uniquestring(resourceGroup().id))]",
      "imagePublisher": "Canonical",
      "imageOffer": "UbuntuServer",
      "nicName1": "[concat(variables('virtualNetworkName'),'-nic1')]",
      "nicName2": "[concat(variables('virtualNetworkName'),'-nic2')]",
      "addressPrefix": "10.0.0.0/16",
      "storageAccountType": "Standard_LRS",
      "publicIPAddressName1": "[concat(parameters('projectPrefix'),'-pip1')]",
      "publicIPAddressName2": "[concat(parameters('projectPrefix'),'-pip2')]",
      "publicIPAddressType": "Dynamic",
      "vmName1": "[concat(parameters('projectPrefix'),'vm1-web')]",
      "vmName2": "[concat(parameters('projectPrefix'),'vm2-web')]",
      "vmSize": "Standard_A1",
      "virtualNetworkName": "[concat(parameters('projectPrefix'),'-vnet-weblab')]",      
      "subnetName1": "[concat(variables('virtualNetworkName'),'-subnet1-fe')]",
      "subnetName2": "[concat(variables('virtualNetworkName'),'-subnet2-be')]",
      "subnetPrefix": "10.0.0.0/24",
      "subnetRef1": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName1'))]",
      "subnetRef2": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName2'))]"
    },
    "resources": [   
      {
        "comments": "Network Security Group",
        "name": "[variables('nsgName')]",
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2017-09-01",
        "location": "[resourceGroup().location]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowHttpAll",
              "properties": {
                "description": "Allow http traffic to web servers",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "direction": "Inbound",
                "access": "Allow",
                "priority": 100,
                "protocol": "Tcp",     
                "destinationAddressPrefix": "*",
                "destinationPortRange": "80"
              }
            },
            {
              "name": "AllowSshAll",
              "properties": {
                "description": "Allow SSH traffic to web servers",
                "sourceAddressPrefix": "*",
                "sourcePortRange": "*",
                "direction": "Inbound",
                "access": "Allow",
                "priority": 200,
                "protocol": "Tcp",                   
                "destinationAddressPrefix": "*",
                "destinationPortRange": "22"
              }
            }
          ]
        }
      },   
      {
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('storageAccountName1')]",
        "apiVersion": "2017-06-01",
        "location": "[variables('location')]",
        "sku": {
          "name": "[variables('storageAccountType')]"
        },
        "kind": "Storage",
        "properties": {}
      },
      {
        "apiVersion": "2017-06-01",
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('publicIPAddressName1')]",
        "location": "[variables('location')]",
        "properties": {
          "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
          "dnsSettings": {
            "domainNameLabel": "[parameters('dnsNameForPublicIP')]"
          }
        }
      },
      {
        "apiVersion": "2017-06-01",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[variables('virtualNetworkName')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[variables('addressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[variables('subnetName1')]",
              "properties": {
                "addressPrefix": "[variables('subnetPrefix')]",
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
                }
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2017-06-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('nicName1')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName1'))]",
          "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Dynamic",
                "publicIPAddress": {
                  "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName1'))]"
                },
                "subnet": {
                  "id": "[variables('subnetRef1')]"
                }
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2017-03-30",
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[variables('vmName1')]",
        "location": "[variables('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Storage/storageAccounts/', variables('storageAccountName1'))]",
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('nicName1'))]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[variables('vmSize')]"
          },
          "osProfile": {
            "computerName": "[variables('vmName1')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "[variables('imagePublisher')]",
              "offer": "[variables('imageOffer')]",
              "sku": "[variables('ubuntuOSVersion')]",
              "version": "latest"
            },
            "osDisk": {
              "name": "[concat(variables('vmName1'),'-','osdisk')]",
              "createOption": "FromImage"
            },
            "dataDisks": [
              {
                "diskSizeGB": 1023,
                "lun": 0,
                "createOption": "Empty"
              }
            ]
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces',variables('nicName1'))]"
              }
            ]
          },
          "diagnosticsProfile": {
            "bootDiagnostics": {
              "enabled": true,
              "storageUri": "[concat(reference(concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName1')), '2016-01-01').primaryEndpoints.blob)]"
            }
          }
        }
      }
    ],
    "outputs": {
      "hostname": {
        "type": "string",
        "value": "[reference(variables('publicIPAddressName1')).dnsSettings.fqdn]"
      },
      "sshCommand": {
        "type": "string",
        "value": "[concat('ssh ', parameters('adminUsername'), '@', reference(variables('publicIPAddressName1')).dnsSettings.fqdn)]"
      }
    }
  }
